# AutoCare

./: CMakeLists.txt  LICENSE  README.md
Backend/common/: IDGenerator.h  Utils.cpp  Utils.h
Backend/controllers/: AuthController.cpp  AuthController.h  CartController.cpp  CartController.h  CategoryController.cpp  CategoryController.h  OrderController.cpp  OrderController.h  ProductController.cpp  ProductController.h  UserController.cpp  UserController.h
Backend/services/: AuthService.cpp  AuthService.h  CartService.cpp  CartService.h  OrderService.cpp  OrderService.h  ProductService.cpp  ProductService.h
Backend/storage/: CartStorage.cpp  CartStorage.h  CategoryStorage.cpp  CategoryStorage.h  OrderStorage.cpp  OrderStorage.h  ProductStorage.cpp  ProductStorage.h  UserStorage.cpp  UserStorage.h
app/: main.cpp
domain/: Admin.h  Cart.h  Category.h  Order.h  Product.h  User.h
include/: IDGenerator.cpp  Utils.cpp  Utils.h
services/: AdminService.h  AuthService.cpp  AuthService.h  CartService.cpp  CartService.h  OrderService.cpp  OrderService.h  UserService.cpp  UserService.h
src/: Admin.cpp  Cart.cpp  Category.cpp  Order.cpp  Product.cpp  User.cpp
storage/: AdminStorage.cpp  CartStorage.cpp  CategoryStorage.cpp  OrderStorage.cpp  ProductStorage.cpp  UserStorage.cpp
storage/header/: AdminStorage.h  CartStorage.h  CategoryStorage.h  OrderStorage.h  ProductStorage.h  UserStorage.h
